// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial rendering 1`] = `
<div>
  <form>
    <div>
      Form 
      Invalid
    </div>
    <div>
      Unchanged
    </div>
    <div>
      Form Errors: 
      {"requiredString":{"required":{}},"testNumber":{"greaterThanZero":{"value":0}}}
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Required String
          <input
            value=""
          />
        </label>
        <div>
          Field 
          Invalid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          {"required":{}}
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Test Number
          <input
            value="0"
          />
        </label>
        <div>
          Field 
          Invalid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          {"greaterThanZero":{"value":0}}
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Optional String
          <input
            value=""
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`marking the fields touched 1`] = `
<div>
  <form>
    <div>
      Form 
      Invalid
    </div>
    <div>
      Unchanged
    </div>
    <div>
      Form Errors: 
      {"requiredString":{"required":{}},"testNumber":{"greaterThanZero":{"value":0}}}
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Required String
          <input
            value=""
          />
        </label>
        <div>
          Field 
          Invalid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          {"required":{}}
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Test Number
          <input
            value="0"
          />
        </label>
        <div>
          Field 
          Invalid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          {"greaterThanZero":{"value":0}}
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Optional String
          <input
            value=""
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`setting the fields to invalid values 1`] = `
<div>
  <form>
    <div>
      Form 
      Invalid
    </div>
    <div>
      Changed
    </div>
    <div>
      Form Errors: 
      {"testNumber":{"greaterThanZero":{"value":-2}}}
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Required String
          <input
            value="spongebob"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Test Number
          <input
            value="-2"
          />
        </label>
        <div>
          Field 
          Invalid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          {"greaterThanZero":{"value":-2}}
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Optional String
          <input
            value="patrick"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`setting the fields to valid values 1`] = `
<div>
  <form>
    <div>
      Form 
      Valid
    </div>
    <div>
      Changed
    </div>
    <div>
      Form Errors: 
      null
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Required String
          <input
            value="spongebob"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Test Number
          <input
            value="7"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Optional String
          <input
            value="patrick"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Touched
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`using initialValues prop 1`] = `
<div>
  <form>
    <div>
      Form 
      Valid
    </div>
    <div>
      Unchanged
    </div>
    <div>
      Form Errors: 
      null
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Required String
          <input
            value="spongebob"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Test Number
          <input
            value="7"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
    <div
      class="CheckSomeField"
    >
      <div
        class="field"
      >
        <label>
          Optional String
          <input
            value="patrick"
          />
        </label>
        <div>
          Field 
          Valid
        </div>
        <div>
          Pristine
        </div>
        <div>
          Field Errors: 
          null
        </div>
      </div>
    </div>
  </form>
</div>
`;
